# nordvpn-viking

./: .gitignore  Cargo.toml  README.md  build.rs  nordvpn_manpage.txt
.cargo/: config
.github/: functional_shield.json  status_shield.json
build-helpers/: Cargo.toml
build-helpers/src/: common.rs  fdependencies.rs  foreign_dependencies.rs  git.rs  gresource.rs  gresources.rs  lib.rs  manifest.rs
build-helpers/tests/: gresources_tests.rs  manifest_tests.rs
src/: lib.rs  main.rs  nordvpn.rs
src/nordvpn/: cli.rs  mod.rs  re.rs
