[package]
name = "nordvpn-viking"
version = "0.1.0"
authors = [
    "Jacob Birkett <jacob@birkett.dev"
]
edition = "2021"
description = "A GUI for NordVPN on Linux."
repository = "https://github.com/spikespaz/nordvpn-viking"
license = "Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.gtk]
version = "0.3"
package = "gtk4"

[build-dependencies]

[build-dependencies.reqwest]
version = "0.11"
features = [
    "blocking"
]

[build-dependencies.zip]
version = "0.5"
default-features = false
features = [
    "deflate"
]
