[package]
name = "nordvpn-viking"
version = "0.1.0"
authors = [
    "Jacob Birkett <jacob@birkett.dev"
]
edition = "2021"
description = "A GUI for NordVPN on Linux."
repository = "https://github.com/spikespaz/nordvpn-viking"
license = "Apache-2.0"
publish = false

[package.metadata.foreign-dependencies.flag-icons]
git = "https://github.com/lipis/flag-icons"
commit = "1c50b81a5802532638f1fff93d50cfdd9975f09d"
copy = [
    ["flags/**/*.svg", "assets/flags/"]
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.gtk]
version = "0.3"
package = "gtk4"

[build-dependencies]
glob = "0.3"
slug = "0.1"
cargo_toml = "0.10"

[build-dependencies.serde]
version = "1.0"
features = [
    "derive"
]

[build-dependencies.git2]
version = "0.13"
default-features = false
features = [
    "https"
]
