[package]
name = "nordvpn-viking"
version = "0.1.0"
authors = [
    "Jacob Birkett <jacob@birkett.dev"
]
edition = "2021"
description = "A GUI for NordVPN on Linux."
repository = "https://github.com/spikespaz/nordvpn-viking"
license = "Apache-2.0"
publish = false

[package.metadata]
copy-files = [
    ["src/bin/gui/ui/*.ui", "assets/ui"]
]

[package.metadata.foreign-dependencies.flag-icons]
git = "https://github.com/lipis/flag-icons"
commit = "1c50b81a5802532638f1fff93d50cfdd9975f09d"
copy = [
    ["flags/1x1/*.svg", "assets/flags/square"],
    ["flags/4x3/*.svg", "assets/flags/rectangle"]
]

[package.metadata.gresources.ui]
prefix = "/com/github/spikespaz/nordvpn-viking/ui"

[[package.metadata.gresources.ui.files]]
glob = "assets/ui/*.ui"
alias = "{}"
compressed = true
preprocess = "xml-stripblanks"

[package.metadata.gresources.flag-icons]
prefix = "/com/github/spikespaz/nordvpn-viking/flags"

[[package.metadata.gresources.flag-icons.files]]
glob = "assets/flags/square/*.svg"
alias = "flags/square/{}"
compressed = true
preprocess = "xml-stripblanks"

[[package.metadata.gresources.flag-icons.files]]
glob = "assets/flags/rectangle/*.svg"
alias = "flags/rectangle/{}"
compressed = true
preprocess = "xml-stripblanks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
semver = "1.0"
chrono = "0.4"
byte-unit = "4.0"
once_cell = "1.9"
thiserror = "1.0"

[dependencies.strum]
version = "0.23"
features = [
    "derive"
]

[dependencies.gtk]
version = "0.3"
package = "gtk4"

[build-dependencies]
cargo_toml = "0.10"

[build-dependencies.build-helpers]
path = "build-helpers"

[build-dependencies.serde]
version = "1.0"
features = [
    "derive"
]
