[package]
name = "build-helpers"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3"
slug = "0.1"
cargo_toml = "0.10"

[dependencies.quick-xml]
version = "0.23.0-alpha3"
features = [
    "serialize"
]

[dependencies.serde]
version = "1.0"
features = [
    "derive"
]

[dependencies.git2]
version = "0.13"
default-features = false
features = [
    "https"
]

[dev-dependencies]
test-case = "2.0.0-rc1"
